new endpoints for DIM, NUM
